--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@studio-freight/lenis": "^1.0.11",
     "@vueuse/gesture": "^2.0.0-beta.1",
     "gsap": "^3.11.5",
-    "split-type": "^0.3.3"
+    "split-type": "^0.3.3",
+    "vue3-lottie": "^2.7.0"
   }
 }
