--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@vueuse/core": "^10.1.0",
     "@vueuse/nuxt": "^10.1.0",
     "autoprefixer": "^10.4.14",
+    "concurrently": "^8.2.0",
     "nuxt": "^3.6.5",
     "nuxt-simple-sitemap": "^3.1.5",
     "postcss": "^8.4.23",
